# rust-bitcoinkernel

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  flake.nix  valgrind.supp
.cargo/: config  config.toml
.github/workflows/: ci.yml
ci/test/: 00_setup_env_win64.sh
contrib/: check_subtree_kernel_commits.sh
examples/: Cargo.toml  README.md  script_debug.rs
examples/src/: silentpaymentscanner.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: block_roundtrip.rs  chainman_process_block.rs  fuzz_target_1.rs  fuzz_target_block.rs  fuzz_target_chainman.rs  fuzz_target_verify.rs  script_verify.rs  transaction_roundtrip.rs
libbitcoinkernel-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
libbitcoinkernel-sys/bitcoin/: CMakeLists.txt
libbitcoinkernel-sys/bitcoin/ci/test/: 00_setup_env_mac_cross.sh  00_setup_env_native_nowallet_libbitcoinkernel.sh
libbitcoinkernel-sys/bitcoin/src/: CMakeLists.txt  bitcoin-chainstate.cpp  logging.cpp  validation.cpp  validation.h
libbitcoinkernel-sys/bitcoin/src/kernel/: CMakeLists.txt  bitcoin-chainstate.cpp  bitcoinkernel.cpp  bitcoinkernel.h  bitcoinkernel_wrapper.h
libbitcoinkernel-sys/bitcoin/src/script/: debug.cpp  debug.h
libbitcoinkernel-sys/bitcoin/src/test/fuzz/: coins_view.cpp
libbitcoinkernel-sys/bitcoin/src/test/kernel/: test_kernel.cpp
libbitcoinkernel-sys/bitcoin/test/lint/test_runner/src/: main.rs
libbitcoinkernel-sys/src/: lib.rs
src/: CMakeLists.txt  bitcoin-chainstate.cpp  constants.rs  enums.rs  lib.rs  logging.h  main.rs  verify.rs
src/core/: block.rs  block_tree_entry.rs  iter.rs  mod.rs  script.rs  test_utils.rs  transaction.rs  verify.rs
src/ffi/: c_helpers.rs  constants.rs  mod.rs
src/kernel/: CMakeLists.txt  bitcoin-chainstate.cpp  bitcoinkernel.cpp  bitcoinkernel.h  bitcoinkernel_wrapper.h
src/log/: logging.rs  mod.rs
src/notifications/: kernel.rs  mod.rs  notification.rs  types.rs  validation.rs
src/script/: interpreter.cpp
src/state/: chain.rs  chainstate.rs  context.rs  mod.rs
src/test/: CMakeLists.txt  sigopcount_tests.cpp
src/test/kernel/: test_kernel.cpp
test/lint/test_runner/src/: main.rs
tests/: block_data.txt  test.rs
