# Copyright (c) 2023-present The Bitcoin Kernel developers
# Licensed under the MIT License. See LICENSE file in the project root.

[package]
name = "bitcoinkernel"
version = "0.0.22"
edition = "2021"
rust-version =  "1.71.0"
authors = ["TheCharlatan <seb.kung@gmail.com>"]
description = "Safe Rust bindings to libbitcoinkernel"
license = "MIT"
repository = "https://github.com/TheCharlatan/rust-bitcoinkernel"
documentation = "https://docs.rs/bitcoinkernel"
keywords = ["bitcoin", "ffi", "libbitcoinkernel"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"

[dependencies]
libbitcoinkernel-sys = { path = "libbitcoinkernel-sys", version = "0.0.21" }

[dev-dependencies]
hex = "0.4"
env_logger = "0.11"
log = "0.4"
bitcoin = "0.31"
tempdir = "0.3"
silentpayments = "0.1"
secp256k1 = "0.28"

[workspace]
members = [
    "examples",
    "fuzz",
    "libbitcoinkernel-sys"
]
