[package]
name = "bitcoinkernel"
version = "0.0.24"
edition = "2021"
rust-version =  "1.71.0"
authors = ["TheCharlatan <seb.kung@gmail.com>"]
description = "Safe Rust bindings to libbitcoinkernel"
license = "MIT"
repository = "https://github.com/TheCharlatan/rust-bitcoinkernel"
documentation = "https://docs.rs/bitcoinkernel"
keywords = ["bitcoin", "ffi", "libbitcoinkernel"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"

[dependencies]
libbitcoinkernel-sys = { path = "libbitcoinkernel-sys", version = "0.0.23" }

[dev-dependencies]
hex = "0.4"
env_logger = "0.11"
log = "0.4"
tempdir = "0.3"

[workspace]
members = [
    "examples",
    "fuzz",
    "libbitcoinkernel-sys"
]
