[package]
name = "rust-bitcoinkernel-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.1", features = ["derive"] }

[dependencies.libbitcoinkernel-sys]
path = "../libbitcoinkernel-sys"

[[bin]]
name = "fuzz_target_chainman"
path = "fuzz_targets/fuzz_target_chainman.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_target_verify"
path = "fuzz_targets/fuzz_target_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_target_block"
path = "fuzz_targets/fuzz_target_block.rs"
test = false
doc = false
bench = false
