[package]
name = "libbitcoinkernel-sys"
version = "0.0.1"
edition = "2021"
authors = ["TheCharlatan <seb.kung@gmail.com>"]
description = "Raw Rust bindings to libbitcoinkernel"
license = "MIT"
repository = "https://github.com/TheCharlatan/rust-bitcoinkernel"
links = "libbitcoinkernel.a"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
bindgen = "0.69"
